trunk/Archive2/92/e29cc81e1985d7/output
main.cpp:18:17: error: unknown type name 'Setup'
    void Render(Setup& setup) {
                ^
1 error generated.
